# PyOSPA2

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
PyOSPA2/: wrapper.py
PyOSPA2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
doc/: png_readme.py
include/: lap_wrapper.h  ospa2.hpp
ospa2/: __init__.py
src/: bindings.cpp  ospa2.cpp
tests/: test_cpp_core.py  test_import.py  test_ospa2.py
