[metadata]
name = ospa2
version = 0.1.0
author = Your Name
description = Fast OSPA(2) metric with C++/Eigen/OpenMP + PyBind11
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
